# helper/endpoints.js
@@ -6,12 +6,15 @@ const initializeEndPoints = (app) => {
     app.get("/public/api/sbs/:year/:month", comision.ComisionSbs);
 
     //sunat
-    app.post("/public/api/ruc", consulta.searchMultiRuc); 
-    app.get("/public/api/ruc/:ruc", consulta.searchRuc);
+    app.post("/public/api/sunat/ruc", consulta.searchMultiRuc); 
+    app.get("/public/api/sunat/ruc/:ruc", consulta.searchRuc);
     app.get("/public/api/tc-sunat/actual", consulta.getSunatTipoCambioActual);
     app.get("/public/api/tc-sunat/:year/:month", consulta.getSunatTipoCambio);
   
     //jne
-    app.get("/public/api/dni/:dni", consulta.searchDni); 
+    app.get("/public/api/jne/dni/:dni", consulta.searchDni); 
+
+    //essalud
+    app.get("/public/api/essalud/dni/:dni", consulta.searchEssaluedDni); 
 };
 module.exports = initializeEndPoints;
